# fracture

./: README.md  pyproject.toml
obs_plugins/: __init__.py  core.py  layout.py  obs_controller.py  presets.py
obs_plugins/plugins/: base.py  edge_detection.py
scripts/: mse2_watcher.py  obs_plugin_host.py  overlay_mcp_server.py  setup_obs_overlay.py
tests/: test_obs_controller.py  test_obs_controller_failures.py  test_overlay_mcp_server.py  test_presets.py
