[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arthexis-obs-plugins"
version = "0.1.0"
description = "Multi-plugin OBS Python script host for Arthexis tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.9",
  "obsws-python>=1.7",
  "fastmcp>=2.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["obs_plugins*"]
